--- a/cyfr2_gui.ui
+++ b/cyfr2_gui.ui
@@ -29,19 +29,6 @@
     <string notr="true">background-color: rgb(222, 222, 222);</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="ipInputTextBox">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>40</y>
-     <width>101</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(222, 222, 222);</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="connectButton">
    <property name="geometry">
     <rect>
@@ -68,19 +55,6 @@
     <string>Send</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="msgInputTextBox">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>290</y>
-     <width>201</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(222, 222, 222);</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="secureLabel">
    <property name="geometry">
     <rect>
@@ -99,6 +73,32 @@ color: rgb(255, 255, 255);</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="msgInputLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>102</x>
+     <y>290</y>
+     <width>201</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(222, 222, 222);</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="ipLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>40</y>
+     <width>101</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(222, 222, 222);</string>
    </property>
   </widget>
  </widget>
